# hermes-legacy

hermes2d/: CMakeLists.txt
hermes2d/benchmarks/: CMake.common
hermes2d/cmake/: FindANTTWEAKBAR.cmake  FindEXODUSII.cmake  FindGLEW.cmake  FindGLUT.cmake  FindHDF5.cmake  FindJUDY.cmake  FindMUMPS.cmake  FindPARDISO.cmake  FindPETSC.cmake  FindPTHREAD.cmake  FindPythonLibs.cmake  FindSCALAPACK.cmake  FindTRILINOS.cmake  FindUMFPACK.cmake  PickRealOrCplxLibs.cmake
hermes2d/examples/: CMake.common
hermes2d/examples/neutronics/: CMakeLists.txt  utils.cpp  utils.h
hermes2d/examples/neutronics/fixed-source/stankovski/: .gitignore  CMakeLists.txt  definitions.cpp  definitions.h  domain.mesh  error_estimators.h  main-kelly.cpp  main.cpp  problem_data.h  vertexgen.py
hermes2d/examples/neutronics/fixed-source/stankovski/DRAGON/: input.geo  input.x2m  input2.x2m
hermes2d/examples/neutronics/fixed-source/stankovski/tests/: .gitignore  CMakeLists.txt  main.cpp
hermes2d/include/adapt/: adapt.h  kelly_type_adapt.h
hermes2d/include/function/: function.h  solution.h
hermes2d/include/mesh/: mesh.h
hermes2d/include/projections/: ogprojection.h
hermes2d/include/space/: space_h1.h  space_hcurl.h  space_hdiv.h  space_l2.h
hermes2d/include/views/: scalar_view.h
hermes2d/include/weakform/: weakform.h
hermes2d/src/: CMakeLists.txt  discrete_problem.cpp  feproblem.cpp  feproblem.h  newton_solver.cpp  weakform.cpp
hermes2d/src/adapt/: adapt.cpp  kelly_type_adapt.cpp
hermes2d/tests/: CMake.common
hermes2d/tutorial/: CMake.common
hermes_common/include/: common.h
(+156 files in other folders)
